# proofboot

./: .travis.yml  CMakeLists.txt  README.md  app_tests.pri  bootstrap.py  generate_translation.py  proof.pri  proof_app.pri  proof_build_package.pri  proof_functions.pri  proof_qmlplugin.pri  proof_service.pri  proof_station.pri  proof_tests.pri  proof_translation.pri  proofmodule.json
cmake/: ProofApp.cmake  ProofCommon.cmake  ProofConfig.cmake  ProofInternal.cmake
deploy/debian/: build_deb_package.sh  copy_proof_libs.sh  extract_app_dependencies.sh  extract_deb_dependencies.sh  proof-wrapper
deploy/debian/DEBIAN/: postinst  preinst
features/: proof-gtest.prf  proof.prf  proof_common.prf
travis/: check_for_errorslog.sh  clang-tidy_clang_analyzer_checks.sh  clang-tidy_core_checks.sh  clang-tidy_misc_checks.sh  detect_build_type.sh  grep_proof_app_version.sh  grep_proof_version.sh  pack_app_deb_helper.sh  ping_dependants.sh  s3_upload.sh
travis/apps/compile/: android_compile.sh  clang-format_check.sh  clang-tidy_check.sh  clazy_check.sh  linux_compile.sh  linux_tests_compile.sh
travis/apps/post-compile/: apk_upload.sh  deb_upload.sh  dockerize.sh
travis/apps/pre-compile/: android_configure-proof.sh  linux_configure-proof.sh
travis/apps/unit-tests/: run_tests.sh
travis/proof-modules/compile/: abi_check.sh  android_compile.sh  clang-format_check.sh  clang-tidy_check.sh  clazy_check.sh  codecov_check.sh  linux_compile.sh
travis/proof-modules/post-compile/: raw-bin_upload.sh
travis/proof-modules/pre-compile/: raw-bin_download.sh
(+17 files in other folders)
